--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
       src="https://kit.fontawesome.com/ff3ae1ac12.js"
       crossorigin="anonymous"
     ></script>
-    <title>React App</title>
+    <title>Weather App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
